# pi0disp

./: .gitignore  GEMINI.md  Plan01.md  Plan02.md  Plan03.md  Plan04.md  Plan06.md  Plan1.md  Plan10.md  Plan2.md  Plan4.md  Plan5.md  Plan7.md  Plan8.md  Plan9.md  README.md  Tasks01.md  Tasks03.md  Tasks06.md  Tasks08.md  Tasks09.md  Tasks10.md  Tasks11.md  Tasks13.md  Tasks2.md  Tasks4.md  Tasks5.md  Tasks6.md  Tasks7.md  ToDo.md  ballanime-report.md  mise.toml  pi0disp.toml  prompts.md  pyproject.toml  pyproject.toml~  report.md  review_result.md
.serena/: project.yml
.serena/memories/: codebase_structure.md  coding_conventions.md  post_task_commands.md  project_purpose.md  running_commands.md  suggested_commands.md  task_management_improvements.md  task_summary_st7789v_manual_update.md  tech_stack.md  testing_commands.md  tool_update_info.md
archives/: 20251215-151624-Plan-done.md  20251215-151624-Tasks-done.md  20251215-155901-Plan-done.md  20251215-155901-Tasks-done.md  20251215-160754-Plan-done.md  20251215-160754-Tasks-done.md  20251215-210328-Plan11-done.md  20251215-210328-Plan12-done.md  20251215-210328-Plan13-done.md  20251215-210328-Plan3-done.md  20251215-210328-Plan6-done.md  20251215-210328-Tasks1-done.md  20251215-210328-Tasks10-done.md  20251215-210328-Tasks12-done.md  20251215-210328-Tasks8-done.md  20251215-210328-Tasks9-done.md  20251221-003753-Plan01-done.md  20251221-003753-Tasks01-done.md  20251221-003753-prompts-done.md  20251222-183252-Plan01-done.md  20251222-183252-Plan02-done.md  20251222-183252-Tasks01-done.md  20251222-183252-Tasks02-done.md  20251222-234256-Tasks01-done.md  20251222-234256-Tasks02-done.md  20251222-234329-prompts-done.md  20251223-072542-Tasks01-done.md  20251223-072542-prompts-done.md  20251223-115357-Plan02-done.md  20251223-152900-Plan02-draft-done.md  20251223-152900-Plan05-done.md  20251223-152900-Plan07-done.md  20251223-152900-Tasks01-done.md  20251223-152900-Tasks03-done.md  20251223-152900-Tasks04-done.md  20251223-152900-Tasks07-done.md  20251223-152900-prompts-done.md  20251224-024333-Plan08-done.md  20251224-024333-Plan09-done.md  20251224-024333-Plan10-done.md  (+6 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/ballanime_benchmark_20260109/: plan.md  spec.md
conductor/archive/ballanime_benchmark_duration_20260109/: plan.md
conductor/archive/ballanime_memory_benchmark_20260109/: plan.md
conductor/archive/ballanime_mode_investigation_20260109/: metadata.json  plan.md  spec.md
conductor/archive/ballanime_optimization_20260108/: plan.md  spec.md
conductor/archive/ballanime_performance_optimization_20260109/: metadata.json  plan.md  spec.md
conductor/archive/code-review-fix_20260113/: plan.md  (+2 more)
docs/: ImageProcessor_usage.md  ST7789V-manual.md  ballanime-report.md  for-python.md  lcd_check_implementation_report.md  lcd_check_mockup.html  performance_core_manual.md  samples  sprite-manual.md
samples/: basic_usage.py  color-test.md  color-test.py  color_diag.py  color_test_fix.py  geometric_robot.py  geometric_robot_debug.py  hello_world.py  image_processor_example.py  lcd_check.py  roboface.py  roboface0.py  roboface1.py  roboface2.py  roboface3.py  robot_face0.py  robot_face1.py  robot_face2.py  robot_face_animation.py  robot_face_animation2.py  robot_face_animation3.py  rotation_check.py  rotation_color_check.py  sample_perf_core.py  simple_drawing.py  sprite_usage.py  test1.py  test2.py  test3.py  test4.py  test_border.py  test_display.py
src/pi0disp/: __init__.py  __main__.py  my_logger.py  performance_core.py  st7789v.py  utils.py
tests/: _testbase_cli.py  conftest.py  test_01_disp_base.py  test_02_disp_spi.py  test_03_st7789v.py  test_04_disp_conf.py  test_05_st7789v_offset.py  test_10_cmd_off.py  test_11_cmd_sleep.py  test_12_cmd_wake.py  test_13_cmd_bl.py  test_14_cmd_image.py  test_15_cmd_rgb.py  test_16_cmd_ballanime.py  test_17_cmd_coltest.py  test_18_lcd_check.py  test_19_simple_drawing.py  test_21_utils_my_conf.py  test_22_st7789v_toml.py  test_23_lcd_check_cmd.py  test_23_roboface2.py  test_24_lcd_wizard_logic.py  test_24_roboface2_thread.py  test_25_lcd_wizard_cmd.py  test_25_roboface2_queue.py  test_26_conf_update.py  test_27_orientation_pattern.py  test_28_orientation_wizard.py  test_28_unified_wizard.py  test_29_lcd_wizard_refactor.py  test_51_sample_robot_face_animation.py  test_51_sample_robot_face_animation2.py  test_51_sample_robot_face_animation3.py  test_ballanime_capture.py  test_ballanime_cmd.py  test_ballanime_memory_benchmark.py  test_ballanime_optimized.py  test_ballanime_perf.py  test_ballanime_refactor.py  test_ballanime_report.py  (+19 more)
(+193 files in other folders)
