[project]
name = "pi0disp"
dynamic = ["version"]
description = "Display drivers for Raspberry Pi"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "click>=8.2.1",
    "numpy>=2.3.2",
    "pigpio>=1.78",
    "pillow>=11.3.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
pi0disp = "pi0disp.__main__:cli"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pyproject-flake8>=7.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.flake8]
extend-ignore = ["E203",]
max-complexity = 10

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pi0disp",
    "pigpio",
    "PIL", "PIL.Image", "PIL.ImageDraw", "PIL.ImageFont",
    "numpy",
    "click",
    "cairosvg",
    "pytest"
]
ignore_missing_imports = true
