[project]
name = "pi0disp"
dynamic = ["version"]
description = "Display drivers for Raspberry Pi"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "click>=8.2.1",
    "dynaconf>=3.2.12",
    "numpy>=2.3.2",
    "pigpio>=1.78",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.9",
]
samples = [
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
pi0disp = "pi0disp.__main__:cli"

[tool.flake8]
extend-ignore = ["E203",]
max-complexity = 10

[tool.mypy]
check_untyped_defs = false
# disallow_untyped_defs = true
# install_types = true # スタブのインストール
# non_interactive = true # スタブのインストールを許可する



[[tool.mypy.overrides]]
module = [
    "pi0disp",
    "pigpio",
    "PIL", "PIL.*",
    "numpy",
    "click",
    "click.*",
    "cairosvg",
    "pytest",
    "dynaconf.*",
    "cv2",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v -n auto --cov=pi0disp --cov-report=term-missing --cov-branch"

[tool.uv.workspace]
members = [
    "app1",
]
