[project]
name = "pi0disp"
dynamic = ["version"]
description = "Display drivers for Raspberry Pi"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "click>=8.2.1",
    "dynaconf>=3.2.12",
    "numpy>=2.3.2",
    "pigpio>=1.78",
    "pillow>=11.3.0",
    "psutil>=7.2.1",
    "pycairo>=1.29.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "psutil>=7.2.1",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.9",
    "types-psutil>=7.2.1.20251231",
]
samples = [
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
pi0disp = "pi0disp.__main__:cli"

[tool.flake8]
extend-ignore = ["E203",]
max-complexity = 10

[tool.mypy]
check_untyped_defs = true
# disallow_untyped_defs = true
# install_types = true # スタブのインストール
# non_interactive = true # スタブのインストールを許可する

[[tool.mypy.overrides]]
module = [
    "pi0disp",
    "pigpio",
    "PIL", "PIL.*",
    "numpy",
    "click",
    "click.*",
    "cairosvg",
    "pytest",
    "dynaconf.*",
    "cv2",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --cov=pi0disp --cov-report=term-missing --cov-branch"

[tool.uv.workspace]
members = [
    "app1",
]

[tool.basedpyright]
reportMissingSuperCall = false
typeCheckingMode = "standard" 
reportPossiblyUnboundVariable = "none"

reportMissingImports = "none"

# None かもしれないオブジェクトの呼び出し/属性アクセスを許可（今回のような件）
reportOptionalCall = "none"

# 型が不明なライブラリからの戻り値（Any）をどこにでも代入可能にする
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

# --- 【型安全性を保つためにオン（warning/error）が推奨される項目】 ---

# 重複したインポートのチェック
reportDuplicateImport = "warning"
# 実行されないコード（到達不能なコード）のチェック
reportUnreachable = "warning"
# 非推奨（Deprecated）な機能の使用
reportDeprecated = "warning"
# ライブラリのコードを解析して型を推論（サードパーティ製ライブラリの補完が向上）
useLibraryCodeForTypes = true
